--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-render-html": "^0.6.0",
-        "react-router-dom": "^5.1.2"
+        "react-router-dom": "^5.1.2",
+        "react-slick": "^0.25.2",
+        "slick-carousel": "^1.8.1"
     },
     "scripts": {
         "crabuild": "react-scripts build",
